--- a/Primero/index.html
+++ b/Primero/index.html
@@ -1,1 +1,37 @@
-INICIO
+<!DOCTYPE html>
+<html lang="es">
+    <head>
+        <meta charset="UTF-8">
+        <title>Primera Web</title>
+    </head>
+    <body>
+        <!-- Esto es un texto preformateado -->
+        <pre>
+        Esta es 
+        la primera frase
+        ñ &ntilde; &copy; &reg; &yen; $
+        </pre>
+        <!-- Párrafos -->
+        <p>
+            Primer Párrafo
+        </p>
+        <p>
+            Segundo Párrafo
+        </p>
+        <!-- Encabezados -->
+        <h1>Primero</h1>
+        <h2>Segundo</h2>
+        <h3>Tercero</h3>
+
+        <!-- Linea Horizontal-->
+        <hr/>
+
+        <!-- Párrafo avanzado-->
+        <blockquote>
+            Tema 1
+            <p>
+                Este es el tema 1 del libro
+            </p>
+        </blockquote>
+    </body>
+</html>
