Fin Párrafos y Listas

--- a/Primero/index.html
+++ b/Primero/index.html
@@ -27,11 +27,38 @@
         <hr/>
 
         <!-- Párrafo avanzado-->
-        <blockquote>
-            Tema 1
+        <blockquote style="background-color: chocolate;">
+            <span style="color: blue;">Tema 1</span>
             <p>
-                Este es el tema 1 del libro
+                Este es el <del>tema</del> <ins>1</ins> del libro
             </p>
         </blockquote>
+        <!-- Listas-->
+        <ul style="list-style-type:armenian;">
+            Lista de objetos
+            <li>Mesa</li>
+            <li>Silla</li>
+            <li>Ordenador</li>
+        </ul>
+
+        <ol>
+            Lista de ordenadores
+            <li>Ordenador Profesor
+                <Ul>
+                Especificaciones
+                <li>Pantalla Plana</li>
+                <li>Procesador i5</li>  
+
+                </Ul>
+            </li>
+            <li>Ordenador Alumnos</li>
+        </ol>
+
+        <dl>
+            <dt>Ordenador</dt>
+            <dd>Objeto que hace muchas cosas</dd>
+            <dt>Pantalla</dt>
+            <dd>Objeto que muestra muchas cosas</dd>
+        </dl>
     </body>
 </html>
