Fin primero.html

--- a/Primero/Primero.html
+++ b/Primero/Primero.html
@@ -17,6 +17,45 @@ PRIMER EJERCICIO
             fueron también Semedo, Todibo y Rafinha, pero sobre todo regresó Coutinho que, 
             hasta la fecha, parece pieza clave del nuevo Barça del neerlandés.</p>
 
+        <br>
+     <blockquote style="background-color:darkgoldenrod;"> 
+        <p>
+            El brasileño, tras conquistarlo todo en Múnich, ha vuelto al Camp Nou fino y 
+            decidido a triunfar de blaugrana. Pese a todo esto, la entidad de Bartomeu, 
+            sumida en una grave crisis institucional, ha terminado el periodo de transferencias 
+            con un beneficio de 2,5 millones de euros (124 gastos y 126,5 ingresos). 
+        </p>
+    </blockquote>
+
+        <ol>Fichajes FC Barcelona Temporada 2020 - 2021
+            <ul>
+                Altas
+                <li>Pjanic (Juventus)</li>
+                <li>Trincao (Sporting Braga)</li>
+                <li>Sergiño Dest (Ajax)</li>
+            </ul>
+
+            <ul>
+                Bajas
+                <li>Arthur, Arda Turan, Setién (entrenador), Rakitic (Sevilla)</li>
+                <li>Wagué (Cedido al PAOK), Arturo Vidal (Inter), Semedo (Wolverhampton)</li>
+                <li> Suárez (Atlético), Monchu (cedido al Girona)</li>
+                <li>Rafinha (PSG), Todibo (cedido al Benfica)</li>
+            </ul>
+        </ol>
+        <dl>
+            <dt>Sergiño Dest</dt>
+            <dd>Sergiño Gianni Dest es un futbolista estadounidense nacido en Países Bajos 
+                que juega como defensa en el Fútbol Club Barcelona de la Primera División 
+                de España.​ De padre estadounidense y madre neerlandesa, Dest ha representado
+                a la selección absoluta de los Estados Unidos desde 2019.</dd>
+            <dt>Pjaníc</dt>
+            <dd>Miralem Pjanić es un futbolista bosnio. Juega de centrocampista y su actual 
+                equipo es el F. C. Barcelona de la Primera División de España. También es 
+                internacional con la selección de Bosnia y Herzegovina.</dd>
+
+        </dl>
+
 
 
 
