--- a/Primero/Enlaces/index.html
+++ b/Primero/Enlaces/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <a href="https://www.google.es" target="_blank" hreflang="es" type="text/html">google</a>
+    <br/>
+    <a href="miweb/general.html">IR A GENERAL</a>
+    <br/>
+    <a href="miweb/Contenido.html">Ir a contenido</a>
+    <br/>
+    <a href="miweb/Contenido.html#final">
+    Ir al final de contenido
+    </a>
 </body>
 </html>
